# riscv-vp-plusplus

sw/canny/: Makefile  filter.c  filter.h  main.c
sw/canny-nocam/: Makefile  canny_A7_C_ref.c
sw/canny-nocam/video/: jku001.pgm  jku002.pgm  jku003.pgm
sw/canny/video/: jku100x70_001.pgm  jku100x70_002.pgm  jku100x70_003.pgm
vp/src/platform/basic/: CMakeLists.txt  camera.h  main.cpp  main4Canny.cpp  uart2.h
